<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Online Müzayede Uygulaması</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_kisisel">Kişisel Bilgilerim</string>
    <string name="menu_muzayedem">Müzayedelerim</string>
    <string name="menu_urunlerim">Ürünlerim</string>
    <string name="menu_peylist">Pey Listem</string>
    <string name="menu_siparis">Siparişlerim</string>
    <string name="menu_out">Çıkış Yap</string>
    <string name="menu_galeri">Galeri</string>
    <string name="menu_kurallar">Müzayede Kuralları</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Sign in</string>
    <string name="title_activity_murunleri">MurunleriActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="Email" />
    <string name="adres">Adress</string>
    <string name="isim">İsim</string>
    <string name="soyisim">Soyisim</string>
    <string name="telefon">Telefon</string>
    <string name="sifre">Şifre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_urun" />
    <string name="menu_yeniurun">Yeni Ürün </string>
    <string name="submit" />
    <string name="fab_content_desc" />
</resources>
