<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:background="@drawable/btnn"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColorHint="#020202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields"
        android:autofillHints="@string/Email" />

    <EditText
        android:id="@+id/sdres"
        android:layout_width="413dp"
        android:layout_height="98dp"
        android:layout_marginTop="21dp"
        android:hint="@string/adres"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isim" />

    <EditText
        android:id="@+id/isim"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/btnn"
        android:ems="10"
        android:hint="@string/isim"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="@string/isim" />

    <EditText
        android:id="@+id/soyisim"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btnn"
        android:ems="10"
        android:hint="@string/soyisim"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="@string/soyisim" />

    <EditText
        android:id="@+id/telefon"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btnn"
        android:ems="15"
        android:hint="@string/telefon"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sdres"
        android:autofillHints="@string/telefon" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="@string/sifre"
        android:background="@drawable/btnn"
        android:ems="10"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefon"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/kaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/kaydet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>